# webscraper

./: database.py  dependencies.py  docker-compose.yml  main.py  mian.py  mongodb.py  pyproject.toml
my_scraper/: database.py  scraper.py  scrapy.py
my_scraper/controller/: scraper_controller.py
my_scraper/models/: user.py
my_scraper/repositories/: scraper_repositorie.py
my_scraper/views/: scraper_views.py
