[tool.poetry]
name = "webscraper"
version = "0.1.0"
description = ""
authors = ["simonrs <simonamatredjo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
scrapy = "^2.11.0"
pymongo = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
